--- a/public/resources/plugins/ItemSlider/css/style.css
+++ b/public/resources/plugins/ItemSlider/css/style.css
@@ -63,7 +63,7 @@
 
 .mi-slider ul li h4 {
 	display: inline-block;
-	font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+	font-family:  "Times New Roman", serif;
 	font-style: italic;
 	font-weight: 400;
 	font-size: 18px;
