--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -209,6 +209,11 @@
 											<h4>H-P</h4>
 											<ul>
 												<li>
+													<a href="/kategoriler/ikincielilan/incikboncuk">İncik Boncuk</a>
+
+												</li>
+												
+												<li>
 													<a href="/kategoriler/ikincielilan/kirtasiye">Kırtasiye</a>
 
 												</li>
