--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -92,7 +92,7 @@
 	<label class = "col-sm-2 control-label">Açıklama</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_area :explication, class:"form-control",rows: "5", :onkeyup => 'ikincielaciklamaVerify()'%>
+		<%= t.text_area :explication, class:"form-control",rows: "5", :onkeyup => 'ikincielaciklamaVerify()', :maxlength => 1000%>
 	</div>
 </div>
 
