--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -319,6 +319,10 @@
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/dersnotu">-Ders Notu </a>
 							</div>
+							
+							<div class="panel-body">
+								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/incikboncuk">-İncik Boncuk </a>
+							</div>
 
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
