--- a/app/views/application/_evarkadasiform.html.erb
+++ b/app/views/application/_evarkadasiform.html.erb
@@ -119,7 +119,7 @@
 	<label class = "col-sm-2 control-label">Açıklama</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_area :explication, class:"form-control",rows: "5", :onkeyup => 'evarkadasiaciklamaVerify()' %>
+		<%= t.text_area :explication, class:"form-control",rows: "5", :onkeyup => 'evarkadasiaciklamaVerify()', :maxlength => 1000 %>
 	</div>
 </div>
 
