--- a/app/views/application/_ozeldersform.html.erb
+++ b/app/views/application/_ozeldersform.html.erb
@@ -95,7 +95,7 @@
 	<label class = "col-sm-2 control-label">Açıklama</label>
 
 	<div class = "col-sm-10">
-		<%= t.text_area :explication, rows: "5", class:"form-control", :onkeyup => 'ozeldersaciklamaVerify();' %>
+		<%= t.text_area :explication, rows: "5", class:"form-control", :onkeyup => 'ozeldersaciklamaVerify();', :maxlength => 1000 %>
 	</div>
 </div>
 
