--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -3,7 +3,7 @@
 	<head>
 		<title>404!!</title>
 		<meta charset="UTF8"/>
-		<link href="http://localhost:3000/resources/404/css/style.css" rel="stylesheet" type="text/css"  media="all" />
+		<link href="/resources/404/css/style.css" rel="stylesheet" type="text/css"  media="all" />
 	</head>
 	<body>
 		<!--start-wrap--->
@@ -17,11 +17,11 @@
 			<!---End-header---->
 			<!--start-content------>
 			<div class="content">
-				<img src="http://localhost:3000/resources/404/images/error-img.png" title="error" />
+				<img src="/resources/404/images/error-img.png" title="error" />
 				<p><span><label>O</label>hooo.....</span> Her ne arıyorsan yanlış yerdesin be kardeşim!!</p>
-				<a href="http://www.campusilan.com">Anasayfaya Dön</a>
+				<a href="/">Anasayfaya Dön</a>
 				<div class="copy-right">
-					<p>&copy; <a href="http://www.campusilan.com">Campus İlan</a> | Üniversitelilerin ilan sitesi.</p>
+					<p>&copy; <a href="/">Campus İlan</a> | Üniversitelilerin ilan sitesi.</p>
 				</div>
    			</div>
 			<!--End-Cotent------>
