--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -319,7 +319,7 @@
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/dersnotu">-Ders Notu </a>
 							</div>
-							
+
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/incikboncuk">-İncik Boncuk </a>
 							</div>
@@ -450,24 +450,40 @@
 
 									<div  class="panel-body">
 
-										<div class="jcarousel-wrapper" style="margin-bottom: 80px;">
+										<div class="jcarousel-wrapper " style="margin-bottom: 80px;">
 											<div class="jcarousel">
 												<ul>
 													<% @acililanlar.each do |advert| %>
 
 													<li>
 
-														<div class='wrapper'>
+														<div class='wrapper wrapper2'>
 															<!-- image -->
 															<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small) %></a>
 															<!-- description div -->
 															<div class='description'>
 																<!-- description content -->
 																<div class='description_content'>
+
+																	<% if advert.name.length <= 32 %>
 																	<%= advert.name %>
+
+																	<% else %>
+
+																	<%= advert.name[0..31] %>...
+																	<% end %>
 																</div>
 																<!-- end description content -->
 															</div>
+
+															<div class='descriptionSabit2'>
+																<!-- description content -->
+																<div class='description_content'>
+																	<%= advert.price %> &#x20BA;
+																</div>
+																<!-- end description content -->
+															</div>
+
 															<!-- end description div -->
 														</div>
 
@@ -513,7 +529,19 @@
 
 										<div  class=" thumbnail">
 
-											<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
+											<div class="wrapper wrapper2">
+
+												<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
+
+												<div class='descriptionSabit2'>
+													<!-- description content -->
+													<div class='description_content2'>
+														<%= advert.price %> &#x20BA;
+													</div>
+													<!-- end description content -->
+												</div>
+
+											</div>
 
 										</div>
 
@@ -1011,17 +1039,35 @@
 
 											<li>
 
-												<div   class='wrapper'>
+												<div   class='wrapper wrapper2'>
 													<!-- image -->
 													<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name %></a>
 													<!-- description div -->
 													<div class='descriptionSabit'>
 														<!-- description content -->
 														<div class='description_content'>
+															
+															<% if advert.name.length <= 28 %>
 															<%= advert.name %>
+															
+															<% else %>
+															
+															<%= advert.name[0..27] %>...
+															
+															<% end %>
 														</div>
 														<!-- end description content -->
 													</div>
+													
+													<div class='descriptionSabit2'>
+														<!-- description content -->
+														<div class='description_content'>
+															<%= advert.price %>&#x20BA;
+														</div>
+														<!-- end description content -->
+													</div>
+													
+													
 													<!-- end description div -->
 												</div>
 
@@ -1303,7 +1349,7 @@
 
 					<div class="panel-body">
 
-						<div id="mi-slider" class="mi-slider" style="margin-top: -75px; clear: both;">
+						<div id="mi-slider" class="wrapper wrapper2 mi-slider" style="margin-top: -75px; clear: both;">
 							<ul>
 								<% @ensonikinciel.each do |advert| %>
 								<li>
@@ -1354,6 +1400,7 @@
 								<a href="#">İKİNCİ EL</a><a href="#">EV ARKADAŞI</a><a href="#">ÖZEL DERS</a>
 
 							</nav>
+
 						</div>
 
 					</div>
@@ -1502,19 +1549,31 @@
 						İlanlar</h3>
 					</div>
 
-					<div class="panel-body">
+					<div class=" panel-body">
 
-						<div id="mi-slider2" class="ensonilanlar-large mi-slider" style=" clear: both;">
+						<div id="mi-slider2" class=" ensonilanlar-large mi-slider" style=" clear: both;">
 							<ul>
 								<% @ensonikinciel.each do |advert| %>
 								<li>
 
-									<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %>
-									<% if advert.name.length <= 18 %> <h4><%= advert.name %></h4></a>
+									<div class="wrapper wrapper2">
 
-									<% else %>
-									<h4><%= advert.name[0..17] + "..." %></h4></a>
-									<% end %>
+										<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %>
+										<% if advert.name.length <= 18 %> <h4><%= advert.name %></h4></a>
+
+										<% else %>
+										<h4><%= advert.name[0..17] + "..." %></h4></a>
+										<% end %>
+
+										<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+
+									</div>
 
 								</li>
 
@@ -1523,6 +1582,8 @@
 							<ul>
 								<% @ensonevarkadasi.each do |advert| %>
 								<li>
+									
+									<div class="wrapper wrapper2"> 
 
 									<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %>
 									<% if advert.name.length <= 18 %> <h4><%= advert.name %></h4></a>
@@ -1530,6 +1591,17 @@
 									<% else %>
 									<h4><%= advert.name[0..17] + "..." %></h4></a>
 									<% end %>
+									
+									
+									<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content2'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+									
+									</div>
 
 								</li>
 
@@ -1539,6 +1611,8 @@
 							<ul>
 								<% @ensonozelders.each do |advert| %>
 								<li>
+									
+									<div class="wrapper wrapper2"> 
 
 									<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %>
 									<% if advert.name.length <= 18 %> <h4><%= advert.name %></h4></a>
@@ -1546,6 +1620,17 @@
 									<% else %>
 									<h4><%= advert.name[0..17] + "..." %></h4></a>
 									<% end %>
+									
+									
+									<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content2'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+									
+									</div>
 
 								</li>
 
@@ -1597,7 +1682,7 @@
 
 								<li>
 
-									<div class='wrapper'>
+									<div class='wrapper wrapper2'>
 										<!-- image -->
 										<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),width:"100%;" %></a>
 										<!-- description div -->
@@ -1608,6 +1693,17 @@
 											</div>
 											<!-- end description content -->
 										</div>
+										
+										
+										<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+										
+										
 										<!-- end description div -->
 									</div>
 
@@ -1682,7 +1778,7 @@
 
 								<li>
 
-									<div class='wrapper'>
+									<div class='wrapper wrapper2'>
 										<!-- image -->
 										<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name %></a>
 										<!-- description div -->
@@ -1693,6 +1789,11 @@
 											</div>
 											<!-- end description content -->
 										</div>
+										
+										
+										
+										
+										
 										<!-- end description div -->
 									</div>
 
@@ -2273,7 +2374,7 @@
 								<li>
 									<% if advert.images != [] %>
 
-									<div class='wrapper'>
+									<div class='wrapper wrapper2'>
 										<!-- image -->
 										<a href="<%= advert.href %>"> <%= image_tag advert.images[0].imagefile(:small) %></a>
 										<!-- description div -->
@@ -2284,12 +2385,21 @@
 											</div>
 											<!-- end description content -->
 										</div>
+										
+										<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+										
 										<!-- end description div -->
 									</div>
 
 									<% else %>
 
-									<div class='wrapper'>
+									<div class='wrapper wrapper2'>
 										<!-- image -->
 										<a href="<%= advert.href %>"> <%= image_tag Image.new.imagefile %></a>
 										<!-- description div -->
@@ -2300,6 +2410,16 @@
 											</div>
 											<!-- end description content -->
 										</div>
+										
+										
+										<div class='descriptionSabit2'>
+											<!-- description content -->
+											<div class='description_content'>
+												<%= advert.price %> &#x20BA;
+											</div>
+											<!-- end description content -->
+										</div>
+										
 										<!-- end description div -->
 									</div>
 
@@ -2325,9 +2445,6 @@
 		<a id='backTop'>Back To Top</a>
 
 		<%= render "footer" %>
-		
-		
-		
 
 		<div class = "ilaneklendi modal fade" id = "myModal" tabindex = "-1" role = "dialog"
 		aria-labelledby = "myModalLabel" aria-hidden = "true">
@@ -2352,7 +2469,6 @@
 							Kapat
 						</button>
 
-						
 					</div>
 
 				</div><!-- /.modal-content -->
@@ -2499,14 +2615,13 @@
 		<%= render "headerfixedjs" %>
 
 		<!-- Dropdown login box -->
-		
-		
+
 		<script src="resources/js/bootstrap.min.js"></script>
 
-			<script>
-				var $modaljquery = jQuery.noConflict();
+		<script>
+			var $modaljquery = jQuery.noConflict();
 
-			</script>
+		</script>
 
 		<% if params[:yeniilan] %>
 		<script>
