--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -177,7 +177,10 @@
 			as needed -->
 			<script src="/resources/js/bootstrap.min.js"></script>
 
-			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
+			
+			<div class="row" style="position: relative;margin-bottom: 10px;">
+
+				
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
