--- a/app/views/index/yardim.html.erb
+++ b/app/views/index/yardim.html.erb
@@ -110,7 +110,9 @@
 
 		<div class="container-fluid">
 
-			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
+			<div class="row" style="position: relative;margin-bottom: 10px;">
+
+				
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
