--- a/public/resources/plugins/captionplugin/caption.css
+++ b/public/resources/plugins/captionplugin/caption.css
@@ -29,7 +29,7 @@ div.descriptionSabit2{
 	
 	display:none; /* hide it */
 	/* styling bellow */
-	background-color:red;
+	background-color:#ED5365;
 	font-family: 'tahoma';
 	font-size:15px;
 	color:white;
