--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -119,7 +119,11 @@
 
 		<div class="container-fluid">
 
-			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
+			
+
+				<div class="row" style="position: relative;margin-bottom: 10px;">
+
+				
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
@@ -129,6 +133,8 @@
 				</div>
 
 			</div>
+
+			
 
 			<div class="row">
 
