--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -118,6 +118,9 @@
 		</div>
 	</div>
 </div>
+
+<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+<br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
 		<%= t.submit 'İlan Ver',class:"btn btn-default" %>
