--- a/app/views/application/_evarkadasiform.html.erb
+++ b/app/views/application/_evarkadasiform.html.erb
@@ -264,7 +264,7 @@ var state = form.elements['advert_<%= advertable %>_state'].value;
 
 <% if local[:mode] == 0 %>
 	var kullanim = $("#ikincielform #kullanim").is(":checked");
-	return ilanadi && fiyat && marka && aciklama && kullanim;
+	return ilanadi && fiyat && marka && aciklama && kullanim && grecaptcha.getResponse()!="";
 <% elsif local[:mode] == 1 %>
 	return ilanadi && fiyat && marka && aciklama;
 <% end %>}</script>
