--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -115,7 +115,7 @@
 				text-align: left;
 			}
 		</style>
-		<script src='https://www.google.com/recaptcha/api.js'></script>
+		<script src='https://www.google.com/recaptcha/api.js?hl=tr'></script>
 	</head>
 
 	<body>
