--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -106,7 +106,7 @@
 			}
 		</style>
 	
-	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<script src='https://www.google.com/recaptcha/api.js?hl=tr'></script>
 	</head>
 
 	<body>
