--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -730,7 +730,7 @@
 											<div class="col-lg-2 col-xs-6 col-md-4 col-sm-4">
 
 												<div class="thumbnail">
-													<a <%= image_tag advert.pimage.imagefile(:small),title:advert.name,class: "masterTooltip" %> </a>
+													<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),title:advert.name,class: "masterTooltip" %> </a>
 
 												</div>
 
