--- a/app/views/user_mailer/forgot.html.erb
+++ b/app/views/user_mailer/forgot.html.erb
@@ -14,18 +14,13 @@
 	<img src="http://www.campusilan.com/resources/images/logo.png"/>
 
 	
-	<p>	Campus İlan'a hoşgeldiniz.Umarız Campus İlan'da keyifli vakit geçirir ve aradığınızı bulabilirsiniz. </p> 
+	<p>	Şifrenizi unuttuğunuzu söylediniz.O zaman hemen size yardımcı olalım </p> 
 
-	<p> Kayıt olmak için kullandığınız eposta adresi: <%= @user.email %> <br>
-	<p> Kullanıcı Adınız: <%= @user.username %>	 
-	<p> Şifreniz: <%= @user.password %></p>	 
+	
+	<p> Yeni şifre oluşturmak için <a href="http://www.campusilan.com/sifremiunuttum">buraya</a> tıklayınız.</p>
 		
 		
-	<p> Lütfen kaydınızı onaylamak için aşağıdaki butona tıklayınız.</p> 
-	
-	
 
-<a href="http://www.campusilan.com/verify?user=<%= @user.username %>&token=<%= @user.confirm_token %>">Hesabımı onayla</a> <br><br>
 
 <p>Bizi tercih ettiğiniz için teşekkür ederiz. </p>
 <p style="color:#2E86A3;">Campus İlan - Üniversitelilerin ilan sitesi  </p>
