--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -4,7 +4,7 @@
 
 		<ul id="main-menu" class="sm sm-blue" style="z-index: 3;border-radius: 0">
 			<li><a href="/">Anasayfa</a></li>
-			<li><a>Kategoriler</a>
+			<li><a style="cursor: pointer;">Kategoriler</a>
 				<ul>
 					<li><a href="/kategoriler/ikincielilan">İkinci El İlan</a></li>
 					
@@ -14,7 +14,7 @@
 				</ul>
 				
 			</li>
-			<li><a>Üniversiteler</a>
+			<li><a style="cursor: pointer;">Üniversiteler</a>
 				
 				<ul>
 					<% topUniversities.each do |record| %>
@@ -24,7 +24,7 @@
 				
 			</li>
 			
-			<li><a>Fırsatlar</a>
+			<li><a style="cursor: pointer;">Fırsatlar</a>
 				
 				<ul>
 					<li><a href="/firsatlar?acililanlar=1">Acil İlanlar</a></li>
